--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1669,7 +1669,7 @@ h6 {
   @include header-font-stack();
   margin: 0 0 em($gutter / 2);
   line-height: 1.4;
-  color: $color-headings-text;
+/*   color: $color-headings-text; */
 
   a {
     color: $color-headings-text;
