--- a/assets/cart.css
+++ b/assets/cart.css
@@ -6,6 +6,7 @@
   --quantity-button-border-color: rgb(84 164 91 / 100%);
   --quantity-button-bg: rgb(84 164 91 / 5%);
   --quantity-button-color: rgb(84 164 91 / 100%);
+  --color-white: #FFFFFF;
 }
 
 .quantity {
@@ -354,7 +355,7 @@
   border: 1px solid #D20000;
 }
 
-  
+
 .button--update-cart {
   margin: 10px 0;
   padding: 7px 7px 7px 3px;
@@ -365,7 +366,7 @@
       margin: 0 0 0 10px;
     }
   }
-  
+
 .arrow {
   border: solid;
   border-width: 0 3px 3px 0;
@@ -376,7 +377,7 @@
 .arrow--right {
   transform: rotate(-45deg);
 }
-  
+
 .js-update-cart-message {
   position: absolute;
   top: calc(100% + 10px);
@@ -395,4 +396,30 @@
   border-radius: 7px;
   margin-bottom: 10px;
   padding: 15px;
+}
+
+.soil3-modal {
+  background-color: var(--color-white);
+  margin: 0 auto;
+  max-width: 90%;
+  padding: 10px;
+  position: relative;
+}
+
+.soil3-modal__title {
+  margin-bottom: 0.5em;
+}
+
+.soil3-modal__message {
+  line-height: 1.3;
+}
+
+.soil3-modal__card {
+  margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+  .soil3-modal {
+    max-width: 500px;
+  }
 }
