--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -25,6 +25,10 @@
   {% endif %}
 
   {% include 'social-meta-tags' %}
+  
+  {%- if request.page_type == 'index' -%}
+  	<meta name="google-site-verification" content="GhSNMklbFcKT98jYU17sUMGVIl_uX2zoCjwPtYARNNg" />
+  {%- endif -%}
 
   <script>
     document.documentElement.className = document.documentElement.className.replace('supports-no-js', 'supports-js');
